--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,24 +4,18 @@
 #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
-    url: '#about'
+  - name: Exposés
+    url: 'exposes'
     weight: 10
-  - name: Posts
-    url: '#posts'
-    weight: 20
   - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
+    url: 'projects'
+    weight: 20
   - name: Contact
-    url: '#contact'
-    weight: 60
+    url: 'contact'
+    weight: 30
+  - name: À propos
+    url: 'about'
+    weight: 40
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
