--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,12 +10,15 @@ main:
   - name: Projects
     url: 'projects'
     weight: 20
-  - name: Contact
-    url: 'contact'
+  - name: Articles
+    url: 'articles'
     weight: 30
+  - name: Contact
+    url: '#contact'
+    weight: 40
   - name: À propos
     url: 'about'
-    weight: 40
+    weight: 50
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
